fix on ios

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@
 body {
   background: linear-gradient(to bottom, #4b10c9, #5b55ed);
   margin: 0;
+  /* For standalone PWA and iOS Safari safe area */
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 }
 
 #root {
